# totango-python

./: .gitignore  CHANGELOG.rst  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-17-modernization-roadmap.md
tests/: test_totango.py
totango/: __init__.py
